✨feat: endpoints para editar, deletar, marcar todas as mensagens como lidas e listar usuários
Implementados novos endpoints no MessageController para editar, deletar e marcar todas as mensagens como lidas entre usuários, além de listar os usuários com quem houve troca de mensagens. Métodos correspondentes foram adicionados ao MessageService, e a documentação do Swagger foi atualizada para refletir essas novas rotas da API.
